--- a/app/src/main/res/menu/add_pin_menu.xml
+++ b/app/src/main/res/menu/add_pin_menu.xml
@@ -4,7 +4,7 @@
       tools:context="au.com.wsit.project11.ui.MainActivity">
     <item
         android:icon="@mipmap/ic_done_white_48dp"
-        android:id="@+id/action_settings"
+        android:id="@+id/action_save_pin"
         android:orderInCategory="100"
         android:title="@string/action_save"
         app:showAsAction="always"/>
