--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -9,7 +9,7 @@
         app:showAsAction="never"/>
     <item
         android:icon="@mipmap/ic_camera"
-        android:id="@+id/action_add_pin"
+        android:id="@+id/action_start_camera"
         android:orderInCategory="200"
         android:title="@string/add_pin"
         app:showAsAction="always"/>
