--- a/app/src/main/res/layout/board_item.xml
+++ b/app/src/main/res/layout/board_item.xml
@@ -1,35 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    card_view:cardCornerRadius="10dp"
-    android:layout_margin="10dp">
-
-<RelativeLayout
-    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:padding="5dp"
-        android:textStyle="bold"
-        android:textSize="18dp"
-        android:text="Nature"
-        android:id="@+id/boardTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <ImageView
-        android:layout_below="@id/boardTitle"
-        android:scaleType="centerCrop"
-        android:src="@drawable/asset6"
-        android:id="@+id/boardImage"
+    <android.support.v7.widget.CardView
+        android:id="@+id/boardCard"
         android:layout_width="match_parent"
-        android:layout_height="150dp"/>
+        android:layout_height="wrap_content"
+        card_view:cardCornerRadius="10dp"
+        android:layout_margin="10dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:padding="5dp"
+                android:textStyle="bold"
+                android:textSize="18dp"
+                android:text="Nature"
+                android:id="@+id/boardTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <ImageView
+                android:layout_below="@id/boardTitle"
+                android:scaleType="centerCrop"
+                android:src="@drawable/asset6"
+                android:id="@+id/boardImage"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"/>
+
+        </RelativeLayout>
+
+
+    </android.support.v7.widget.CardView>
 
     <android.support.v7.widget.RecyclerView
-        android:layout_below="@+id/boardImage"
+        android:layout_below="@+id/boardCard"
         android:id="@+id/pinRecycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -37,5 +47,3 @@
     </android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
-
-</android.support.v7.widget.CardView>
