--- a/app/src/main/res/layout/pin_item.xml
+++ b/app/src/main/res/layout/pin_item.xml
@@ -4,7 +4,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    card_view:cardCornerRadius="10dp"
+    card_view:cardCornerRadius="8dp"
     android:layout_margin="12dp">
 
 <RelativeLayout
@@ -29,6 +29,8 @@
         android:layout_height="wrap_content"/>
 
     <TextView
+        android:paddingStart="4dp"
+        android:paddingLeft="4dp"
         android:text="Pretty picture of earth"
         android:layout_below="@+id/pinTitle"
         android:id="@+id/pinComment"
@@ -36,6 +38,9 @@
         android:layout_height="wrap_content"/>
 
     <TextView
+        android:paddingStart="4dp"
+        android:paddingLeft="4dp"
+        android:paddingBottom="4dp"
         android:text="#Space #Earth"
         android:id="@+id/pinTags"
         android:layout_below="@id/pinComment"
