Added delete pin call

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -13,5 +13,6 @@
     <string-array name="pin_choices">
         <item>Add tags</item>
         <item>Add to board</item>
+        <item>Delete pin</item>
     </string-array>
 </resources>
