--- a/app/src/main/res/layout/board_item.xml
+++ b/app/src/main/res/layout/board_item.xml
@@ -33,17 +33,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="150dp"/>
 
+            <android.support.v7.widget.RecyclerView
+                android:layout_below="@+id/boardImage"
+                android:id="@+id/pinRecycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </android.support.v7.widget.RecyclerView>
+
         </RelativeLayout>
 
 
     </android.support.v7.widget.CardView>
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_below="@+id/boardCard"
-        android:id="@+id/pinRecycler"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
-    </android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
