--- a/app/src/main/res/layout/fragment_add_board.xml
+++ b/app/src/main/res/layout/fragment_add_board.xml
@@ -6,6 +6,7 @@
               android:padding="10dp">
 
     <TextView
+        android:textSize="18sp"
         android:text="Give it a good name"
         android:layout_gravity="center_horizontal"
         android:textAlignment="center"
@@ -21,14 +22,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/previewBoardsRecycler"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </android.support.v7.widget.RecyclerView>
-
-
+    <Button
+        android:text="Save"
+        android:layout_gravity="center_horizontal"
+        android:id="@+id/saveBoardButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 
 </LinearLayout>
