--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -13,4 +13,10 @@
         android:orderInCategory="200"
         android:title="@string/add_pin"
         app:showAsAction="always"/>
+    <item
+        android:icon="@mipmap/ic_add_board"
+        android:id="@+id/action_add_board"
+        android:orderInCategory="50"
+        android:title="@string/add_board"
+        app:showAsAction="always"/>
 </menu>
