--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -14,7 +14,7 @@
         android:title="@string/add_pin"
         app:showAsAction="always"/>
     <item
-        android:icon="@mipmap/ic_add_board"
+        android:icon="@mipmap/ic_action_add_box"
         android:id="@+id/action_add_board"
         android:orderInCategory="50"
         android:title="@string/add_board"
