--- a/app/src/main/res/layout/pin_item.xml
+++ b/app/src/main/res/layout/pin_item.xml
@@ -20,6 +20,12 @@
             android:id="@+id/pinImage"
             android:layout_width="170dp"
             android:layout_height="wrap_content"/>
+
+        <VideoView
+            android:id="@+id/pinVideo"
+            android:layout_width="170dp"
+            android:layout_height="170dp"/>
+
     </android.support.v7.widget.CardView>
 
     <TextView
