--- a/app/src/main/res/layout/fragment_modify_board.xml
+++ b/app/src/main/res/layout/fragment_modify_board.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:textSize="18sp"
-        android:text="Give it a good name"
+        android:text="Change Board"
         android:layout_gravity="center_horizontal"
         android:textAlignment="center"
         android:layout_width="wrap_content"
@@ -20,6 +20,12 @@
         android:textAlignment="center"
         android:id="@+id/boardNameEditText"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <Button
+        android:text="Save Changes"
+        android:id="@+id/saveButton"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
     <android.support.v7.widget.RecyclerView
