--- a/app/src/main/res/layout/fragment_add_board.xml
+++ b/app/src/main/res/layout/fragment_add_board.xml
@@ -22,6 +22,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
+    <Button
+        android:text="Save Board"
+        android:id="@+id/saveButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/previewRecycler"
         android:layout_width="wrap_content"
